<resources>
    <string name="app_name">Riviera-Student</string>
    <string name="action_settings">Settings</string>

    <string name="student_name">Name</string>
    <string name="student_email">Email Address</string>
    <string name="student_grad">Graduation MM/YYYY</string>
    <string name="student_website">Personal Website</string>
    <string name="student_linkedin">Linkedin</string>
    <string name="resume">Take a photo of your resume</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">SUBMIT</string>
    <string name="error_field_required">This field is required</string>
</resources>
